Sync local ST7735_t3 repo with upstream

--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,6 @@
-name=ST7735_t3
-version=1.0.0
-author=Adafruit, Paul Stoffregen
-maintainer=Paul Stoffregen
-sentence=Teensy optimized library for ST7735, ST7789 and ST7796 SPI displays.
-paragraph=Teensy optimized library for ST7735, ST7789 and ST7796 SPI displays.
-category=Display
-url=https://github.com/PaulStoffregen/ST7735_t3
+name=ST7796_t3
+version=1.0.0-local
 architectures=*
-dot_a_linkage=true
+category=Display
+sentence=Local override (fonts in PROGMEM)
+includes=ST7796_t3.h
